--- a/SdtReactApi/Pages/_ViewImports.cshtml
+++ b/SdtReactApi/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SdtReactApi
-@namespace SdtReactApi.Pages
+﻿@using SmartdustApp
+@namespace SmartdustApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
