React App updated in merged project
React App updated in merged project

--- a/SdtReactApi/ClientApp/src/components/Navbar/Navbar.css
+++ b/SdtReactApi/ClientApp/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .Navbar-body{
     display: flex;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    
 }
 .Navbar{
     width: 92%;
