--- a/SdtReactApi/ClientApp/src/Pages/Contact/Contact.css
+++ b/SdtReactApi/ClientApp/src/Pages/Contact/Contact.css
@@ -53,15 +53,18 @@
     width: 425px;
     text-align: center;
 }
-.submit-user-details input{
+.submit-user-details button{
     width: 425px;
     height: 36px;
     background-color: #fff;
     color: black;
     border-radius: 25px;
     font-weight: 500;
+    margin-top: 10px;
 }
-
+.submit-user-details button:hover{
+    background-color: #fff;
+}
 @media screen and (min-width:101px) and (max-width:600px){
     .Contact-details{
         flex-direction: column;
@@ -92,7 +95,7 @@
     .submit-user-details{
         width: 300px;
     }
-    .submit-user-details input{
+    .submit-user-details button{
         width: 300px;
         height: 36px;
     }
