--- a/SdtReactApi/ClientApp/src/components/AutoSlider/AutoSlider.css
+++ b/SdtReactApi/ClientApp/src/components/AutoSlider/AutoSlider.css
@@ -9,6 +9,6 @@
 @media screen and (min-width:101px) and (max-width:600px){
     .image-slider-body img{
         width: 100%;
-        height: 15vh;
+        height: 16rem;
     }
 }
