Leave applicationn working api and ui side
Leave applicationn working api and ui side

--- a/SdtReactApi/ClientApp/src/Pages/Leaves/LeaveApplication/LeaveApplication.css
+++ b/SdtReactApi/ClientApp/src/Pages/Leaves/LeaveApplication/LeaveApplication.css
@@ -23,8 +23,9 @@
     border-radius: 20px;
     margin-top: 30px;
 }
-.date-pickers{
+.date-pickers {
     display: flex;
+    justify-content: space-between;
     gap: 20px;
 }
 
