The Attached file is getting saved in the db and the ids are also getting saved in the leave
The Attached file is getting saved in the db and the ids are also getting saved in the leave

--- a/SdtReactApi/ClientApp/src/Pages/Leaves/LeaveApplication/LeaveApplication.css
+++ b/SdtReactApi/ClientApp/src/Pages/Leaves/LeaveApplication/LeaveApplication.css
@@ -34,7 +34,11 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
-.documentupload{
+.fileslist {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.documentupload {
     display: inline-block;
     background-color: #f0f0f0;
     padding: 10px;
